Started to consider make_ver rewite Looked at java again, no string templates